# otus-cpp-prof-5

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
include/: Controller.hpp  Document.hpp  Entity.hpp  Line.hpp  Model.hpp  Point.hpp  Rectangle.hpp  View.hpp
src/: main.cpp
